--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -208,7 +208,7 @@ h4 {
 .loginBtn {
   display: flex;
   margin: auto;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
 }
 .otherLogin {
@@ -788,23 +788,6 @@ hr {
   color: var(--white);
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 /* Login */
 .loginLogo {
   width: 220px;
@@ -932,8 +915,11 @@ input .checkboxSquare {
   width: 45px;
   border: 5px;
   margin-left: 10px;
+  margin-right: 5px;
 }
+.shorterInput{
 
+}
 .interest {
   display: flex;
   box-shadow: 0 0 11px rgba(33, 33, 33, .2);
@@ -963,21 +949,6 @@ input .checkboxSquare {
   justify-content: space-between;
   align-items: center;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 /* Medlemskort */
 
@@ -1033,14 +1004,6 @@ input .checkboxSquare {
 .marginClassLeft {
   margin: 20px;
 }
-
-
-
-
-
-
-
-
 
 /* Planer */
 .planPrice {
