--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -104,6 +104,9 @@ input[type='checkbox']{
   height: 100px;
   overflow: scroll;
 }
+.lineBreak{
+  border: 2px solid #a3a3a3 !important;
+}
 
 .btnStyleguideMenu {
   background-color: var(--deepYellow);
@@ -145,12 +148,18 @@ h4 {
   font-size: 40px;
   font-weight: 900;
   text-align: center;
-  display: inline-block;
   color: var(--deepBlue);
   padding: 0 20px 0 20px;
   margin: 30px 0 10px 0;
   text-decoration: underline;
 }
+
+.styleguideDiv{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
+
 
 /* Landingpage */
 #landingBack {
